--- a/matisse/build.gradle
+++ b/matisse/build.gradle
@@ -52,10 +52,10 @@ dependencies {
 // jcenter configuration for novoda's bintray-release
 // $ ./gradlew clean build bintrayUpload -PbintrayUser=BINTRAY_USERNAME -PbintrayKey=BINTRAY_KEY -PdryRun=false
 publish {
-    userOrg = 'zhihu'
-    groupId = 'com.zhihu.android'
+    userOrg = 'newbiz'
+    groupId = 'com.newbiz.android'
     artifactId = 'matisse'
-    publishVersion = '0.5.2-beta4'
+    publishVersion = '0.5.3'
     desc = 'A well-designed local image selector for Android'
     website = 'https://www.zhihu.com/'
 }
