--- a/matisse/build.gradle
+++ b/matisse/build.gradle
@@ -14,8 +14,15 @@
  * limitations under the License.
  */
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
+//apply plugin: 'com.novoda.bintray-release'
 apply plugin: 'checkstyle'
+apply plugin: 'maven'
+
+def group = 'com.newbiz.android'
+def version = '0.5.6'
+def artifactId = "matisse"
+
+def mavenUrl = "http://nexus.corp.kuaishou.com:88/nexus/content/repositories/releases/"
 
 android {
     compileSdkVersion 27
@@ -51,14 +58,14 @@ dependencies {
 
 // jcenter configuration for novoda's bintray-release
 // $ ./gradlew clean build bintrayUpload -PbintrayUser=BINTRAY_USERNAME -PbintrayKey=BINTRAY_KEY -PdryRun=false
-publish {
-    userOrg = 'newbiz'
-    groupId = 'com.newbiz.android'
-    artifactId = 'matisse'
-    publishVersion = '0.5.6'
-    desc = 'A well-designed local image selector for Android'
-    website = 'https://www.zhihu.com/'
-}
+//publish {
+//    userOrg = 'newbiz'
+//    groupId = 'com.newbiz.android'
+//    artifactId = 'matisse'
+//    publishVersion = '0.5.6'
+//    desc = 'A well-designed local image selector for Android'
+//    website = 'https://www.zhihu.com/'
+//}
 
 task javadoc(type: Javadoc) {
     options.encoding = "utf-8"
@@ -81,4 +88,25 @@ task checkstyle(type:Checkstyle) {
     showViolations true
     classpath = files()
     source 'src/main/java'
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from android.sourceSets.main.java.srcDirs
+}
+
+artifacts {
+    archives sourcesJar
+}
+
+
+task upload {
+    doLast {
+        exec {
+            commandLine "mvn", "deploy:deploy-file", "-DgroupId="+group, "-DartifactId="+artifactId, "-Dversion="+version,
+                    "-Dpackaging=aar", "-Durl="+mavenUrl,
+                    "-Dfile=build/outputs/aar/vitas-release.aar", "-DrepositoryId=kuaishou.releases",
+                    "-Djava-source="+android.sourceSets.main.java.srcDirs
+        }
+    }
 }
